added server side validation for input data

--- a/MongoDB/Mongoose/Shop/views/admin/add-product.ejs
+++ b/MongoDB/Mongoose/Shop/views/admin/add-product.ejs
@@ -1,22 +1,50 @@
 <%- include('../includes/main.ejs') %>
     <main>
-      <form action="/admin/add-product" method="POST" class="form-control">
+      <form action="/admin/add-product" method="POST" class="form-control" novalidate>
         <div class="input-group">
+          <% if(errorMsg) { %>
+            <div class="flash-error" style="margin: 0.5rem 0.5rem 1.5rem; font-size:large">
+              <%= errorMsg %>
+            </div>
+          <% } %>
           <div class="inner-grp">
             <div class="name">
               <label for="name">Name:</label>
-            <input type="text" id="name" name="name"/>
+            <input 
+              class="<%= validationResult.find(e => e.path === 'name') ? 'invalid' : '' %>" 
+              type="text" 
+              id="name" 
+              name="name" 
+              value="<%= oldInput.name %>"
+            />
             </div>
             <div class="price">
               <label for="price">Price:</label>
-            <input type="number" id="price" name="price"/>
+            <input 
+              class="<%= validationResult.find(e => e.path === 'price') ? 'invalid' : '' %>" 
+              type="number" 
+              id="price" 
+              name="price" 
+              value="<%= oldInput.price %>"
+            />
             </div>
           </div>
           <div class="inner-grp2">
             <label for="imgUrl">Image URL:</label>
-            <input type="text" id="imgUrl" name="imgUrl">
+            <input 
+            class="<%= validationResult.find(e => e.path === 'imgUrl') ? 'invalid' : '' %>" 
+            type="text" 
+            id="imgUrl" 
+            name="imgUrl" 
+            value="<%= oldInput.imgUrl %>"
+            >
             <label for="desc">Description:</label>
-            <textarea id="desc" name="desc"></textarea>
+            <textarea 
+              class="<%= validationResult.find(e => e.path === 'desc') ? 'invalid' : '' %>" 
+              id="desc" 
+              name="desc"
+              ><%= oldInput.desc %>
+            </textarea>
           </div>
         </div>
         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
