--- a/MongoDB/Mongoose/Shop/public/style.css
+++ b/MongoDB/Mongoose/Shop/public/style.css
@@ -100,8 +100,8 @@ body {
 
 .inner-grp {
   display: flex;
-  justify-content: space-evenly;
-  margin-left: 0.5rem;
+  justify-content: space-around;
+  margin: 0 0.25rem;
 }
 
 .inner-grp2 {
@@ -465,4 +465,10 @@ main h1 {
   color: #FF0000;
   text-align: center;
   font-size: 1.1rem;
+}
+
+.form-control input.invalid {
+  color: white;
+  font-weight: 600;
+  background-color: #f78b8b;
 }
