updated path for displaying images

--- a/MongoDB/Mongoose/Shop/views/admin/products.ejs
+++ b/MongoDB/Mongoose/Shop/views/admin/products.ejs
@@ -10,9 +10,9 @@
           </header>
           <div class="card-img">
             <img
-              src="<%= product.imgUrl %>"
-              alt="<%= product.name %>"
-            />
+            src="/<%= product.imgUrl %>"
+            alt="<%= product.name %>"
+          />
           </div>
           <div class="card-content">
             <h2 class="product-price">Rs. <%= product.price.toLocaleString('en-IN') %>/-</h2>
