modified path for displaying image

--- a/MongoDB/Mongoose/Shop/views/shop/product-detail.ejs
+++ b/MongoDB/Mongoose/Shop/views/shop/product-detail.ejs
@@ -3,7 +3,7 @@
     <main class="pro-detail">
         <!-- <hr> -->
         <div class="pro-detail-img">
-            <img src="<%= product.imgUrl  %>" alt="<%= product.name  %>">
+            <img src="/<%= product.imgUrl  %>" alt="<%= product.name  %>">
         </div>
         <div class="detail">
             <h1><%= product.name  %></h1>
