--- a/MongoDB/Mongoose/Shop/public/style.css
+++ b/MongoDB/Mongoose/Shop/public/style.css
@@ -367,6 +367,13 @@ main h1 {
   margin-bottom: 1rem;
 }
 
+.order-header a {
+  text-decoration: none;
+  color: #000000;
+  cursor: pointer;
+  font-weight: 600;
+}
+
 .order-header h2 {
   font-size: 1.3rem;
   font-weight: bold;
@@ -480,4 +487,25 @@ main h1 {
 .file-input {
   background-color: white;
   padding-top: 0.5rem;
+}
+
+.pagination {
+  margin: 2rem;
+  text-align: center;
+}
+
+.pagination a {
+  text-decoration: none;
+  color: #00695c;
+  padding: .25rem .5rem;
+  border: 1px solid #00695c;
+  /* border-radius: 50%; */
+  margin: 0 1rem;
+  font-weight: 600;
+}
+
+.pagination a:hover,
+.pagination a:active {
+  background-color: #00695c;
+  color: #ffffff;
 }
