--- a/MongoDB/Mongoose/Shop/public/css/style.css
+++ b/MongoDB/Mongoose/Shop/public/css/style.css
@@ -347,6 +347,20 @@ main h1 {
   color: white;
 }
 
+.order-now {
+  text-align: center;
+  margin-top: 2rem;
+}
+
+.order-now .btn {
+  padding: 0.25rem;
+  font-size: 1.1rem;
+}
+
+.order-now a {
+  text-decoration: none;
+}
+
 .orders-container {
   display: flex;
   flex-direction: column;
